2017-11-19  David Wetzel <dave@turbocat.de>
    * GSWeb/GSWAjaxRequestHandler.*
      new files
    * GSWeb/GNUmakefile
      add GSWAjaxRequestHandler.*, WOAjaxRequestHandler.h
    * GSWeb/GSWApplication+Defaults.*
      add AjaxRequestHanderKey
    * GSWeb/GSWApplication.h
      add +ajaxRequestHandlerKey
      add +setAjaxRequestHandlerKey:
    * GSWeb/GSWApplication.m
      create ajax request handler in registerRequestHandlers
    * GSWeb/GSWComponentRequestHandler.m
      return current class instance in +handler (works in subclasses too..)
    * GSWConstants.*
      added ajax
    * GSWContext.*
      added +shouldNotStorePageInBacktrackCache
    * GSWeb/GSWMessage.*
      added storePageInBacktrackCache
    * GSWeb/GSWRequest.*
      added -isAjaxSubmit, ajaxFormSubmitKey
    * GSWeb/GSWSession.m
    * GSWeb/GSWeb.h
    * GSWeb/GSWWOCompatibility.h
      ajax adjustments

2017-11-16  David Wetzel <dave@turbocat.de>
    * GSWExtensions/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
    * GSWExtensions/GSWExceptionPage.gswc/GSWExceptionPage.html
      tweak CSS and Sizes for iPhone
2017-09-02  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWSessionTimeOutManager.m
	  shorten description to avoid loop
	* GSWeb/GSWApplication.m
	  added -frameworkNameWOExtensions to make WONames work
	  (Session restoration error page did not work)
	* GSWDatabase/WODisplayGroup.m
	  added <WebObjects/GSWPrivate.h> header
2015-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWConstants.m
	  downcase Header keys
2015-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWHTTPIO.m
	  force header keys to lowercase
2014-07-04  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWBody.m
	  fix initWithName:...
2014-07-01  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWHyperlink.m
	  fix -appendAttribute:... for nil href value
2014-06-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWAssociation.m