@@ -1,4 +1,10 @@
 2017-11-19  David Wetzel <dave@turbocat.de>
+    * GSWAdaptors/Apache2/mod_gsw.c
+      compiles with Apache 2.4 now
+    * GSWAdaptors/README.txt
+      updated readme
+
+2017-11-19  David Wetzel <dave@turbocat.de>
     * GSWeb/GSWAjaxRequestHandler.*
       new files
     * GSWeb/GNUmakefile
